// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a RichContent component 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": undefined,
    }
  }
/>
`;

exports[`renders a RichContent component with HTML content 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h1>Testing HTML content</h1>",
    }
  }
/>
`;

exports[`renders a RichContent component with Page Builder content 1`] = `
<div>
  <div
    dataContentType="row"
  />
</div>
`;
